--- a/public/index.htm
+++ b/public/index.htm
@@ -47,10 +47,10 @@
         <li><a href="">Сотрудничество</a></li>
       </ul>
       <ul class="social">
-        <li><a href=""><img src="" alt="Facebook"></a></li>
-        <li><a href=""><img src="" alt="Instagram"></a></li>
-        <li><a href=""><img src="" alt="Twitter"></a></li>
-        <li><a href=""><img src="" alt="Youtube"></a></li>
+        <li><a href="http://facebook.com" target="_blank"><img src="icons/003-facebook.png" alt="Facebook"></a></li>
+        <li><a href="http://instagram.com" target="_blank"><img src="icons/001-instagram.png" alt="Instagram"></a></li>
+        <li><a href="http://twitter.com" target="_blank"><img src="icons/004-.png" alt="Twitter"></a></li>
+        <li><a href="http://youtube.com" target="_blank"><img src="icons/002-youtube.png" alt="Youtube"></a></li>
       </ul>
     </footer>
   </div>
