add bottom empty cart btn

--- a/public/index.htm
+++ b/public/index.htm
@@ -78,6 +78,7 @@
       <li></li>
     </ul>
     <div class="total">
+      <button onclick="emptyCart()">Очистить корзину</button>
       <h3>30 000 грн.</h3>
     </div>
   </div>
